# Auto_HookPoint

./: .gitignore  HookedPixel.py  HookedPixelConfig.py  Models.py  README  README.md  dev-requirements.txt  experiment.py  main.ipynb  poetry.toml  pyproject.toml  setup.bash  test_utils.py  test_with_modal.py  utils.py
AutoHook/: __init__.py  check.py  utils.py
AutoHook/tests/: test_auto_hook.py  test_check_auto_wrap.py  test_models.py  test_utils.py
Auto_Hook/: __init__.py  check.py  hook.py
Auto_Hook/tests/: test_auto_hook.py  test_check_auto_wrap.py
Auto_HookPoint/: HookedTransformerAdapter.py  __init__.py  check.py  experimental_HookedModule.py  hook.py  utils.py
Automatic_Hook/: __init__.py  check.py
Components/: AutoHooked.py  Builder.py  Diagnostics.py  HookedViT.py
examples/: HookedAutoEncoder.py  decorator.py  hf_example.py  llama_example.py  mamba_example.py  nested.py  sae_lens.py  sae_lens_example.py
src/: Check_Hook.py
tests/: dummy_models.py  speed_benchmark.py  test_adapter.py  test_auto_hook.py  test_auto_wrapper.py  test_check_auto_wrap.py  test_models.py  test_sae_lens_train.py  test_utils.py
